feat: Double & ReDouble implementation
Signed-off-by: Marek Forys <mforys73@gmail.com>